# w40k_damage_calculator

./: .gitignore  README.md  adepta_sororitas_VS_grey_knights.json  dark_angels_VS_grey_knights.json  datasheets.json  pyproject.toml  shell.nix  shooting_vs_generic.json  w40k_damage_calculator.py
datasheets/Adepta Sororitas/: Elite Characters.json  Exo-Armors.json  HQ.json  Melee Infantry.json  Shooting Infantry.json  Tanks.json  Troops.json
datasheets/Dark Angels/: Dreadnoughts.json  Intercessors.json  Melee Elites.json  Others.json  Ranged Anti-Horde.json  Ranged Anti-Tank-Elite.json  Tanks.json  Terminators.json  Vehicles (DD).json  Vehicles.json
datasheets/Dark Angels/HQ/Captain/: Captain (Firstborn) Jump-Pack.json  Captain (Firstborn).json
datasheets/Dark Angels/HQ/Chaplain/: Interrogator-Chaplain Jump-Pack.json  Interrogator-Chaplain.json
datasheets/Dark Angels/Melee Elites/: Others.json  Terminators.json
datasheets/Generic/: Tanks.json
datasheets/Grey Knights/: Elites.json  HQ.json  Nemesis DreadKnight.json  Troops.json
datasheets/Imperial Knights/: Armigers.json  Knight Crusader.json
datasheets/Space Marines/: Lords of War.json
datasheets/Tau/: Troops.json
nix/: sources.json
