[tool.poetry]
name = "w40k_damage_calculator"
version = "0.1.0"
description = ""
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
license = "AGPL v3.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
